--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -20,7 +20,7 @@
         </mat-icon>
     </button>
 </form>
-<mat-table #table [dataSource]="dataSource" style="overflow: auto;" matSort>
+<mat-table #table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="ClassId">
         <mat-header-cell *matHeaderCellDef>Id
         </mat-header-cell>
