--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -90,7 +90,7 @@ marks can no longer be entered/edited for that examination.
             </mat-cell>
         </ng-container>
         <ng-container matColumnDef="MarkFormula">
-            <mat-header-cell *matHeaderCellDef>, Separated Exam Names
+            <mat-header-cell *matHeaderCellDef>Average Of
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-form-field appearance="outline">
