--- a/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.scss
+++ b/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.scss
@@ -2,19 +2,44 @@
 //     //position: absolute;
 //     margin-top: 100px;
 // }
-
-mat-form-field,mat-checkbox{
+// .mat-cell, .mat-header-cell {
+//     width:150px;
+// }
+  
+// .mat-footer-row,
+// .mat-header-row,
+// .mat-row {
+//    // display: inline-flex;
+//     min-width: 100%;
+// }
+  
+// mat-checkbox{
+//     margin-right:15px;
+//     width:100%;
+// }
+mat-cell:first-of-type{
+    padding-left: 0px;
+}
+mat-form-field{
     margin-right:15px;
+    width: 99%;
 }
 button{
     margin-right:15px;
 }
+.mat-sort-header-container,.mat-sort-header-content {
+    height:100% !important;
+}
 
-mat-cell,mat-header-cell{
+mat-header-cell{
     border-right: 1px solid lightgray;
-    min-width: 100px;
-    //flex:1;    
-    justify-content: center;
+    justify-content: flex-end;
+    align-self: stretch;
+}
+
+mat-cell{
+    border-right: 1px solid lightgray;
+    justify-content: center;   
     align-self: stretch;
 }
 .mat-column-Student{
