--- a/src/app/modules/attendance/attendanceboard/attendanceboard.component.html
+++ b/src/app/modules/attendance/attendanceboard/attendanceboard.component.html
@@ -1,9 +1,8 @@
 <mat-card>
     <mat-card-title style="margin:20px">Attendance</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content style="margin:20px">
-        
-            <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+    <mat-card-content style="margin:20px">        
+            <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
                 <mat-tab *ngFor="let component of components;let indx=index">
                     <ng-template mat-tab-label>
                         <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
