--- a/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
+++ b/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
@@ -1,88 +1,90 @@
-<div>
-    <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Exam Subject Marks</strong></div>
-    </div>
-    <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-    <!-- <alert></alert> -->
-    <div style="padding: 15px;" fxLayout="row wrap">
-        <div style="width: 100%;">
-            <form [formGroup]="searchForm">
-                <mat-form-field appearance="outline">
-                    <mat-label>Exam</mat-label>
-                    <mat-select formControlName="searchExamId" (selectionChange)="GetResultReleased($event)">
-                        <mat-option *ngFor="let item of Exams" [value]="item.ExamId">
-                            {{item.ExamName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field appearance="outline">
-                    <mat-label>Class</mat-label>
-                    <mat-select formControlName="searchClassId" (selectionChange)="SelectClassSubject()">
-                        <mat-option *ngFor="let item of FilteredClasses" [value]="item.ClassId">
-                            {{item.ClassName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field appearance="outline">
-                    <mat-label>Section</mat-label>
-                    <mat-select formControlName="searchSectionId">
-                        <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
-                            {{item.MasterDataName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field appearance="outline">
-                    <mat-label>Subject</mat-label>
-                    <mat-select formControlName="searchClassSubjectId">
-                        <mat-option *ngFor="let item of SelectedClassSubjects" [value]="item.ClassSubjectId">
-                            {{item.SubjectName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentSubjects()">
-                    <mat-icon>search</mat-icon>
-                    <mat-icon *ngIf="loading">
-                        <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                    </mat-icon>
-                </button>
-            </form>
-
-            <mat-table #table style="overflow: auto;" [dataSource]="dataSource"
-                *ngIf="ExamStudentSubjectResult.length>0">
-                <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                    <mat-header-cell *matHeaderCellDef>{{disCol!='Action'?disCol:''}}
-                        <div *ngIf="ExamStudentSubjectResult.length>0" fxLayoutAlign="center center">
-                            <button *ngIf="disCol=='Action'"
-                                [disabled]="loading || Permission=='read' || ResultReleased==1" matTooltip="save all"
-                                mat-mini-fab (click)="UpdateAll()">
-                                <mat-icon>all_out</mat-icon>
-                                <mat-icon *ngIf="loading">
-                                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                                </mat-icon>
-                            </button>
-                        </div>
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field style="text-align: center;"
-                            *ngIf="disCol !='StudentClassSubject' && disCol !='Action'">
-                            <input matInput (blur)="onBlur(element,$event)" [attr.name]="disCol"
-                                [value]="element[disCol]" [(ngModel)]="element[disCol]">
-                        </mat-form-field>
-                        <button *ngIf="disCol=='Action'"
-                            [disabled]="loading || Permission=='read' || !element.Action || ResultReleased==1"
-                            matTooltip="save" mat-mini-fab (click)="SaveRow(element)">
-                            <mat-icon>save</mat-icon>
+<!-- <div> -->
+<div style="padding:15px 15px 10px 15px;">
+    <div><strong>Exam Subject Marks</strong></div>
+</div>
+<mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+<!-- <alert></alert> -->
+<div style="padding: 15px;" fxLayout="row wrap">
+    <!-- <div style="width: 100%;"> -->
+    <form [formGroup]="searchForm">
+        <mat-form-field appearance="outline" [style.width.px]="200">
+            <mat-label>Exam</mat-label>
+            <mat-select formControlName="searchExamId" (selectionChange)="GetResultReleased($event)">
+                <mat-option *ngFor="let item of Exams" [value]="item.ExamId">
+                    {{item.ExamName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" [style.width.px]="200">
+            <mat-label>Class</mat-label>
+            <mat-select formControlName="searchClassId" (selectionChange)="SelectClassSubject()">
+                <mat-option *ngFor="let item of FilteredClasses" [value]="item.ClassId">
+                    {{item.ClassName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" [style.width.px]="200">
+            <mat-label>Section</mat-label>
+            <mat-select formControlName="searchSectionId">
+                <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
+                    {{item.MasterDataName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" [style.width.px]="200">
+            <mat-label>Subject</mat-label>
+            <mat-select formControlName="searchClassSubjectId">
+                <mat-option *ngFor="let item of SelectedClassSubjects" [value]="item.ClassSubjectId">
+                    {{item.SubjectName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentSubjects()">
+            <mat-icon>search</mat-icon>
+            <mat-icon *ngIf="loading">
+                <mat-spinner diameter="20" color="Blue"></mat-spinner>
+            </mat-icon>
+        </button>
+    </form>
+    <div style="display:flex;flex-direction:column;">
+        <mat-table #table [dataSource]="dataSource" *ngIf="ExamStudentSubjectResult.length>0">
+            <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
+                <mat-header-cell *matHeaderCellDef>{{disCol!='Action'?disCol:''}}
+                    <div *ngIf="ExamStudentSubjectResult.length>0" fxLayoutAlign="center center">
+                        <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read' || ResultReleased==1"
+                            matTooltip="save all" mat-mini-fab (click)="UpdateAll()">
+                            <mat-icon>all_out</mat-icon>
                             <mat-icon *ngIf="loading">
                                 <mat-spinner diameter="20" color="Blue"></mat-spinner>
                             </mat-icon>
                         </button>
-                        {{disCol=='StudentClassSubject'?element[disCol]:''}}
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
-            </mat-table>
-        </div>
-
+                    </div>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-form-field style="text-align: center;"
+                        *ngIf="disCol !='StudentClassSubject' && disCol !='Action'">
+                        <input matInput (blur)="onBlur(element,$event)" [attr.name]="disCol" [value]="element[disCol]"
+                            [(ngModel)]="element[disCol]">
+                    </mat-form-field>
+                    <button *ngIf="disCol=='Action'"
+                        [disabled]="loading || Permission=='read' || !element.Action || ResultReleased==1"
+                        matTooltip="save" mat-mini-fab (click)="SaveRow(element)">
+                        <mat-icon>save</mat-icon>
+                        <mat-icon *ngIf="loading">
+                            <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                        </mat-icon>
+                    </button>
+                    {{disCol=='StudentClassSubject'?element[disCol]:''}}
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+        </mat-table>
+        <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,50,100]">
+        </mat-paginator>
     </div>
 </div>
+
+
+<!-- </div> -->
+<!-- </div> -->
