--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.html
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.html
@@ -46,11 +46,11 @@
         <mat-icon>checked</mat-icon>
     </button>
 </form>
-<div style="width: 100%;overflow: auto;height:500px">
+<div style="width: 100%;">
     <div *ngIf="ExamStudentSubjectResult.length>0">
         <mat-table #table [dataSource]="dataSource" matSort>
             <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                <mat-header-cell *matHeaderCellDef mat-sort-header style="width:100%;display:flex; justify-content: center;">
+                <mat-header-cell *matHeaderCellDef mat-sort-header style="writing-mode: tb-rl;transform: rotate(-180deg);width:100%;display:flex; justify-content: center;">
                     {{disCol!='Action'?disCol:''}}
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="width:100%;align-self: stretch;">
