no of subjects to select 100 issue fixed

--- a/src/app/modules/ClassSubject/subject-types/subject-types.component.html
+++ b/src/app/modules/ClassSubject/subject-types/subject-types.component.html
@@ -3,7 +3,7 @@
         <div><strong>Subject Types</strong></div>
     </div>
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-    <!-- <alert></alert> -->
+    <i>For "Compulsory", no. of subjects to select should be 1.</i>
     <mat-table #table [dataSource]="dataSource">
         <ng-container matColumnDef="SubjectTypeId">
             <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Id
