--- a/src/app/modules/ClassSubject/subjectboard/subjectboard.component.scss
+++ b/src/app/modules/ClassSubject/subjectboard/subjectboard.component.scss
@@ -1,12 +1,7 @@
-// .container{
-//     margin-top: 125px;
-// }
-
-// @media only screen and (max-width: 600px) {
-//     .container {
-//         margin-top: 150px;
-//     }
-// }
 :host{
     width:100%;
+
+}
+mat-card{
+    width:99%;
 }
