--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -127,11 +127,8 @@
         </ng-container>
         <ng-container matColumnDef="Active">
             <mat-header-cell *matHeaderCellDef style="justify-content: center;">
-                <button style="margin-right: 15px;"
-                    [disabled]="loading || Permission=='read' || Parent=='Information Restriction'"
-                    matTooltip="new item" mat-raised-button color="accent" (click)="AddData()">
-                    <mat-icon>add</mat-icon>
-                </button>
+                Active
+                
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
@@ -141,6 +138,11 @@
         </ng-container>
         <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef style="justify-content: center;">
+                <button style="margin-right: 15px;"
+                    [disabled]="loading || Permission=='read' || Parent=='Information Restriction'"
+                    matTooltip="new item" mat-raised-button color="accent" (click)="AddData()">
+                    <mat-icon>add</mat-icon>
+                </button>
                 <button [disabled]="loading || Permission=='read'" matTooltip="save all" mat-raised-button
                     color="accent" (click)="SaveAll()">
                     <mat-icon>all_out</mat-icon>
