--- a/src/app/modules/dashboard/homedashboard/homedashboard.component.scss
+++ b/src/app/modules/dashboard/homedashboard/homedashboard.component.scss
@@ -2,6 +2,7 @@
     display: grid;
     place-items: center;
     min-height: 92vh;
+    width: 100%;
     background-color:white;    
 }
 
@@ -13,5 +14,5 @@ mat-form-field,button{
     height: max-content;
     //margin-top:100px; 
     margin: 60px;
-    width: 100vw;
+    width: 100%;
 }
