--- a/src/app/modules/student/studentboard/studentboard.component.scss
+++ b/src/app/modules/student/studentboard/studentboard.component.scss
@@ -1,2 +1,9 @@
-:host(app-studentboard) 
-{ width:80% } 
+// :host(app-studentboard) 
+// { width:80% } 
+:host{
+    width:100%;
+
+}
+mat-card{
+    width:99%;
+}
