--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -1,3 +1,6 @@
+:host{
+    width: 100%;
+}
 mat-drawer {
     border-top-right-radius: 1em 1em;
     //width            : 250px;
@@ -63,6 +66,8 @@ app-footer {
     display       : flex;
     flex-direction: column;
     min-height    : 100vh;
+    //width:100%;
+    //overflow: hidden;
 }
 
 .maincontent {
